<resources>
    <string name="app_name">ThemedCalculator</string>
    <string name="title">Math with Ferb!</string>
    <string name="columnCt">4</string>
    <string name="rowCt">5</string>
    <string name="tilde">~</string>
    <string name="equals">=</string>
    <string name="divide">/</string>
    <string name="multiply">×</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="dot">.</string>
    <string name="delete">DEL</string>
    <string name="toggle">+/-</string>
    <string name="square">x^2</string>
    <string name="mod">%</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
</resources>