<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_gravity="center_horizontal">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:src="@drawable/perry">
    </ImageView>
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/lime"
        android:textStyle="bold"
        android:text="@string/title">
    </TextView>
    <TextView
        android:id="@+id/screen"
        android:layout_width="385dp"
        android:layout_height="90dp"
        android:layout_below="@id/title"
        android:layout_marginTop="215dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:alpha="0.65"
        android:background="@color/teal"
        android:gravity="end"
        android:padding="15dp"
        android:text="@string/zero"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold">
    </TextView>
    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="320dp"
        android:layout_marginStart="10dp"
        android:columnCount="@string/columnCt"
        android:rowCount="@string/rowCt"
        android:useDefaultMargins="true">
        <Button
            android:id="@+id/seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            android:theme="@style/Base.Theme.ThemedCalculator"
            android:onClick="digitClicked">
        </Button>
        <Button
            android:id="@+id/eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            android:theme="@style/Base.Theme.ThemedCalculator">
        </Button>
        <Button
            android:id="@+id/nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            android:theme="@style/Base.Theme.ThemedCalculator">
        </Button>
        <Button
            android:id="@+id/divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            android:theme="@style/Base.Theme.ThemedCalculator">
        </Button>
        <Button
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:theme="@style/Base.Theme.ThemedCalculator">
        </Button>
        <Button
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:theme="@style/Base.Theme.ThemedCalculator">
        </Button>
        <Button
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:theme="@style/Base.Theme.ThemedCalculator">
        </Button>
        <Button
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            android:theme="@style/Base.Theme.ThemedCalculator">
        </Button>
        <Button
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:theme="@style/Base.Theme.ThemedCalculator">
        </Button>
        <Button
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:theme="@style/Base.Theme.ThemedCalculator">
        </Button>
        <Button
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:theme="@style/Base.Theme.ThemedCalculator">
        </Button>
        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:theme="@style/Base.Theme.ThemedCalculator">
        </Button>
        <Button
            android:id="@+id/toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle"
            android:theme="@style/style3">
        </Button>
        <Button
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:theme="@style/Base.Theme.ThemedCalculator">
        </Button>
        <Button
            android:id="@+id/dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:theme="@style/style3">
        </Button>
        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:theme="@style/Base.Theme.ThemedCalculator">
        </Button>
        <Button
            android:id="@+id/tilde1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/square"
            android:theme="@style/style2">
        </Button>
        <Button
            android:id="@+id/tilde2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod"
            android:theme="@style/style2">
        </Button>
        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:theme="@style/style1">
        </Button>
        <Button
            android:id="@+id/equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equals"
            android:theme="@style/style1">
        </Button>
    </GridLayout>
</RelativeLayout>
